Update: Sweden focus on main page, archived Egypt, added Swedish influencer strategy

--- a/website/rakraft.html
+++ b/website/rakraft.html
@@ -749,8 +749,8 @@
         <div class="hero-content">
             <div class="hero-badge">Lansering Våren 2025</div>
             <h1>RÅKRAFT</h1>
-            <p class="hero-subtitle">Svensk entrecôte. Långsamt torkad.</p>
-            <p class="hero-tagline">Äkta rökt. Inget annat.</p>
+            <p class="hero-subtitle">Svensk entrecôte från svenska gårdar</p>
+            <p class="hero-tagline">Äkta rökt. Långsamt torkad. Helt svenskt.</p>
             <a href="#waitlist" class="hero-cta">
                 Gå med i väntelistan
                 <span>→</span>
@@ -921,7 +921,7 @@
                 <div class="process-step">
                     <div class="step-number">1</div>
                     <h4 class="step-title">Premiumkött</h4>
-                    <p class="step-desc">Hel entrecôte från svenska gårdar. Inga binderier, inget malet kött. Bara riktigt kött.</p>
+                    <p class="step-desc">Hel entrecôte från utvalda svenska gårdar. Lokal produktion, spårbar råvara.</p>
                 </div>
                 <div class="process-step">
                     <div class="step-number">2</div>
